:lipstick: [open-formulieren/open-forms#2686] Fix map z-index

--- a/src/scss/components/_leaflet-map.scss
+++ b/src/scss/components/_leaflet-map.scss
@@ -4,6 +4,7 @@
 .#{prefix(leaflet-map)} {
   height: 400px;
   position: relative;
+  z-index: 0;
 
   @include modifier('disabled') {
     cursor: default;
